# v-thomas.com

./: .gitattributes  .gitignore  .prettierrc.mts  Cargo.toml  Dockerfile  Justfile  README.md  astro.config.mjs  compose.yaml  flake.nix  fly.toml  markdoc.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  remark-plugins.mjs  rust-toolchain.toml  tsconfig.json  types.d.ts
.github/workflows/: deploy.yaml
components/: README.md  build.mjs  index.ts  package.json  tsconfig.json
components/lib/: social-link.ts  tag-pill.ts
components/lib/social-link/: index.ts
infra/: cdk.json  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml
infra/lib/: app.ts  stack.ts
public/: _redirects
public/js/: components.js
src/: consts.ts  content.config.ts  main.rs
src/components/: BaseHead.astro  BlogPost.astro  CV.astro  Footer.astro  FormattedDate.astro  GoBack.astro  Header.astro  HeaderLink.astro  Icon.astro  LdHead.astro  NavSocialLink.astro  Navbar.astro  Series.astro  SocialLink.astro  Socials.astro  TagPill.astro  footer.rs  header.rs  mod.rs  navbar.rs  posts.astro  project-content.astro  skills.astro
src/components-markdoc/: Heading.astro  Img.astro
src/components/Cv/: CV.astro  (+2 more)
src/layouts/: BlogPost.astro  Body.astro  Project.astro
src/lit/: email-obf.ts  lib.ts  tag-pill.ts
src/pages/: 404.astro  about.rs  index.astro  index.rs  mod.rs  resume.astro  robots.txt.ts  rss.xml.ts
src/server-islands/: posts.astro
src/styles/: global.scss  tailwind.css
src/utils/: isPathaActive.ts  logs.ts  redirect.ts  reordertaggedArticles.ts  take.ts
(+44 files in other folders)
