[package]
name = "v-thomas-com"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1 # Ensures better optimization at the cost of build time
strip = "symbols" # Strips debug symbols from the binary
opt-level = "z" # Optimize for size

[profile.dev]
incremental = true

[dependencies]
chrono = "0.4.39"
futures-util = "0.3.31"
lazy_static = "1.5.0"
titan = "0.4"
titan-lambda = "0.4"
tokio = { version = "1.42.0", features = ["macros", "rt", "rt-multi-thread"] }
